--- a/views/book_detail.ejs
+++ b/views/book_detail.ejs
@@ -1,35 +1,52 @@
 <html>
-  <%- include ("./partials/header.ejs") %>
+<%- include ("./partials/header.ejs") %>
 
   <body>
-    <div class="container-fluid">
-      <div class="row">
-        <%- include ("./partials/sidebar.ejs") %>
-        <div class="col-sm-10">
-          <h2>Title: <%= book.title %></h2>
+    <%- include ("./partials/sidebar.ejs") %>
 
-          <dl>
-            <dt>Genre:</dt>
-            <dd><%= book.genre %></dd>
-            <dt>Author:</dt>
-            <dd><%= book.author %></dd>
-            <dt>Description:</dt>
-            <dd><%= book.description %></dd>
-            <dt>Rating:</dt>
-            <dd><%= book.rating %></dd>
-            <dt>MRP:</dt>
-            <dd>Rs. <%= book.mrp %></dd>
-            <dt>Available Copies:</dt>
-            <dd><%= num_available %></dd>
-          </dl>
-          <form action="/books/issue" method="POST">
-            <input type="text" hidden value="<%= book.id %>" name="bid" />
-            <button class="btn btn-primary" id="loan-button" type="submit">
-              Loan <%= book.title %>
-            </button>
-          </form>
+      <%- include('./partials/alerts') %>
+
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-10">
+              <br>
+              <h2>Title: <%= book.title %>
+              </h2>
+              <hr color="white">
+              <dl>
+                <dt>Genre:</dt>
+                <dd>
+                  <%= book.genreString %>
+                </dd>
+                <dt>Author:</dt>
+                <dd>
+                  <%= book.author %>
+                </dd>
+                <dt>Description:</dt>
+                <dd>
+                  <%= book.description %>
+                </dd>
+                <dt>Rating:</dt>
+                <dd>
+                  <%= book.rating %>
+                </dd>
+                <dt>MRP:</dt>
+                <dd>$ <%= book.mrp %>
+                </dd>
+                <dt>Available Copies:</dt>
+                <dd>
+                  <%= book.available_copies %>
+                </dd>
+              </dl>
+              <form action="/books/issue" method="POST">
+                <input type="text" hidden value="<%= book._id %>" name="bookId" />
+                <button class="btn btn-primary" id="loan-button" type="submit">
+                  Loan <%= book.title %>
+                </button>
+              </form>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
   </body>
+
 </html>
