--- a/views/loaned_books.ejs
+++ b/views/loaned_books.ejs
@@ -1,33 +1,61 @@
 <html>
-  <%- include ("./partials/header.ejs") %>
-  <body>
-    <h3>Loaned Books list</h3>
+<%- include ("./partials/header.ejs") %>
+  <%- include ("./partials/sidebar.ejs") %>
 
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Title</th>
-          <th scope="col">Author</th>
-          <th scope="col">Genre</th>
-          <th scope="col">Borrow Date</th>
-          <th scope="col">Return Buttons</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% books.forEach(function(copy,i){%>
-        <tr>
-          <th scope="row"><%= i %></th>
-          <td><a href="/book/<%=copy.book.id%>/"><%= copy.book.title %></a></td>
-          <td><%= copy.book.author %></td>
-          <td><%= copy.book.genre %></td>
-          <td><%= copy.borrow_date %></td>
-          <td>
-            <!-- TODO: Create a Return book tag that is used for returning the book -->
-          </td>
-        </tr>
-        <%})%>
-      </tbody>
-    </table>
-  </body>
+    <body>
+      <br>
+      <h3>Loaned Books list</h3>
+      <br>
+      <%- include('./partials/alerts') %>
+        <table class="table table-dark table-striped">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Title</th>
+              <th scope="col">Author</th>
+              <th scope="col">Genre</th>
+              <th scope="col">Borrow Date</th>
+              <th scope="col">Return Book</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% if (books.length==0) { %>
+              <td colspan="6">
+                <center>
+                  <h4>No books found.</h4>
+                </center>
+              </td>
+              <% } else { %>
+                <% books.forEach(function(copy,i){%>
+                  <tr>
+                    <th scope="row">
+                      <%= i + 1 %>
+                    </th>
+                    <td><a href="/books/<%=copy.book._id%>">
+                        <%= copy.book.title %>
+                      </a></td>
+                    <td>
+                      <%= copy.book.author %>
+                    </td>
+                    <td>
+                      <%= copy.book.genreString %>
+                    </td>
+                    <td>
+                      <%= copy.borrow_date %>
+                    </td>
+                    <td>
+                      <form action="/books/return" method="POST">
+                        <input type="text" hidden value="<%= copy._id %>" name="bookCopyId" />
+                        <button class="btn btn-primary" id="return-button" type="submit">
+                          Return <%= copy.book.title %>
+                        </button>
+                      </form>
+                    </td>
+                  </tr>
+                  <%})%>
+                    <% } %>
+          </tbody>
+        </table>
+    </body>
+
 </html>
