--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,16 +1,23 @@
-<div class="col-sm-2">
-  <ul class="sidebar-nav">
-    <li><a href="/">Home</a></li>
-    <li><a href="/books">All books</a></li>
-  </ul>
+<header>
+  <div class="container">
+    <h1 class="logo"></h1>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/books">All books</a></li>
 
-  <ul class="sidebar-nav">
-    <% if (currentUser){ %>
-    <li>User: <%= currentUser.username %></li>
-    <li><a href="/books/loaned">My Borrowed</a></li>
-    <li><a href="/logout">Logout</a></li>
-    <% } else { %>
-    <li><a href="/login">Login</a></li>
-    <% } %>
-  </ul>
-</div>
+        <% if (currentUser){ %>
+          <li>Logged in as <br>
+            <h5>
+              <%= currentUser.username %>
+            </h5>
+          </li>
+          <li><a href="/books/loaned">My Borrowed</a></li>
+          <li><a href="/logout">Logout</a></li>
+          <% } else { %>
+            <li><a href="/login">Login</a></li>
+            <% } %>
+      </ul>
+    </nav>
+  </div>
+</header>
