--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
   <%- include ("./partials/header.ejs") %>
 
   <body>
-    <%- include ("./partials/sidebar.ejs") %>
+    <%- include ("./partials/navebar.ejs") %>
     <h3>Welcome to the library. This is your homepage.</h3>
   </body>
 </html>
