--- a/views/book_detail.ejs
+++ b/views/book_detail.ejs
@@ -4,7 +4,7 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <%- include ("./partials/sidebar.ejs") %>
+        <%- include ("./partials/navebar.ejs") %>
         <div class="col-sm-10">
           <h2>Title: <%= book.title %></h2>
 
@@ -20,7 +20,7 @@
             <dt>MRP:</dt>
             <dd>Rs. <%= book.mrp %></dd>
             <dt>Available Copies:</dt>
-            <dd><%= num_available %></dd>
+            <dd><%= book.available_copies %></dd>
           </dl>
           <form action="/books/issue" method="POST">
             <input type="text" hidden value="<%= book.id %>" name="bid" />
