Completed All tasks except Return Book

--- a/views/loaned_books.ejs
+++ b/views/loaned_books.ejs
@@ -21,7 +21,7 @@
           <td><a href="/book/<%=copy.book.id%>/"><%= copy.book.title %></a></td>
           <td><%= copy.book.author %></td>
           <td><%= copy.book.genre %></td>
-          <td><%= copy.borrow_date %></td>
+          <td><%= copy.borrow_data %></td>
           <td>
             <!-- TODO: Create a Return book tag that is used for returning the book -->
           </td>
