--- a/views/loaned_books.ejs
+++ b/views/loaned_books.ejs
@@ -24,6 +24,13 @@
           <td><%= copy.borrow_data %></td>
           <td>
             <!-- TODO: Create a Return book tag that is used for returning the book -->
+            <form action="/books/return" method="POST">
+              <input type="text" hidden value="<%= copy.book.id %>" name="bid" />
+              <input type="text" hidden value="<%= copy.borrow_data %>" name="b_date" />
+              <button class="btn btn-primary" id="return-button" type="submit">
+                Return Copy
+              </button>
+            </form>
           </td>
         </tr>
         <%})%>
