--- a/views/loaned_books.ejs
+++ b/views/loaned_books.ejs
@@ -2,7 +2,9 @@
   <%- include ("./partials/header.ejs") %>
   <body>
     <h3>Loaned Books list</h3>
-
+    <div class="row">
+      <%- include ("./partials/sidebar.ejs") %>
+    </div>
     <table class="table">
       <thead>
         <tr>
