--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,9 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-    <h1>Welcome !!! Happy Reading</h1>
-    <%- include ("./partials/sidebar.ejs") %>
+    <%- include ("./partials/header.ejs") %>
+<body>
+    <div class="row">
+        <%- include ("./partials/sidebar.ejs") %>
+      </div>
     <h2>Register Here:</h2>
     <form action="/register" method="POST">
         <label for="F_Name">First Name:</label>
@@ -25,8 +23,5 @@
         <br>
         <button type="submit" >Submit</button>
     </form>
-</head>
-<body>
-    
 </body>
 </html>
