--- a/views/book_detail.ejs
+++ b/views/book_detail.ejs
@@ -1,5 +1,5 @@
 <html>
-  <%- include ("./partials/header.ejs") %>
+  <%- include ("./partials/header.ejs", {title: "Book Detail"}) %>
 
   <body>
     <div class="container-fluid">
@@ -24,7 +24,7 @@
           </dl>
           <form action="/books/issue" method="POST">
             <input type="text" hidden value="<%= book.id %>" name="bid" />
-            <button class="btn btn-primary" id="loan-button" type="submit">
+            <button class="btn btn-primary" id="loan-button" type="submit" <%= num_available === 0 ? "disabled" : ""%>>
               Loan <%= book.title %>
             </button>
           </form>
