--- a/views/book_list.ejs
+++ b/views/book_list.ejs
@@ -1,5 +1,5 @@
 <html>
-  <%- include ("./partials/header.ejs") %>
+  <%- include ("./partials/header.ejs", {title: "Books | Library"}) %>
 
   <body>
     <div class="container-fluid">
