--- a/views/loaned_books.ejs
+++ b/views/loaned_books.ejs
@@ -1,5 +1,5 @@
 <html>
-  <%- include ("./partials/header.ejs") %>
+  <%- include ("./partials/header.ejs", {title: "Loaned Books"}) %>
   <body>
     <h3>Loaned Books list</h3>
 
@@ -23,7 +23,12 @@
           <td><%= copy.book.genre %></td>
           <td><%= copy.borrow_date %></td>
           <td>
-            <!-- TODO: Create a Return book tag that is used for returning the book -->
+            <form action="/books/return" method="POST">
+              <input type="text" hidden value="<%= copy._id %>" name="bid" />
+              <button class="btn btn-primary" id="return-button" type="submit">
+                Return <%= copy.book.title %>
+              </button>
+            </form>
           </td>
         </tr>
         <%})%>
