--- a/views/partials/navebar.ejs
+++ b/views/partials/navebar.ejs
@@ -16,7 +16,7 @@
       <div class="navbar-nav">
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/books">All Books</a>
-        <a class="nav-link" href="/campgrounds/new">New Campgrounds</a>
+        <a class="nav-link" href="/books/loaned">Loaned Books</a>
       </div>
       <div class="navbar-nav ms-auto">
         <% if(!currentUser) {%>
