--- a/views/book_list.ejs
+++ b/views/book_list.ejs
@@ -1,6 +1,5 @@
 <html>
-  <%- include ("./partials/header.ejs") %> <%-
-  include("./partials/navebar.ejs")%>
+  <%- include ("./partials/header.ejs") %> <% layout('layouts/boilerplate')%>
 
   <body>
     <div class="container-fluid">
@@ -9,16 +8,16 @@
           <h3>Books list</h3>
 
           <form class="row" action="/books/search-book" method="POST">
-            <div class="col-sm-3">
+            <div class="col-sm-4">
               Title: <input type="text" name="title" id="title" />
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-4">
               Author: <input type="text" name="author" id="author" />
             </div>
-            <div class="col-sm-3">
+            <!-- <div class="col-sm-3">
               Genre: <input type="text" name="genre" id="genre" />
-            </div>
-            <div class="col-sm-3">
+            </div> -->
+            <div class="col-sm-4">
               <button id="search_button" class="btn btn-primary" type="submit">
                 Search
               </button>
@@ -37,14 +36,14 @@
               </tr>
             </thead>
             <tbody>
-              <% books.forEach(function(book,i){%>
+              <% books.forEach(function(book,i){ %>
               <tr>
                 <th scope="row"><%= i+1 %></th>
                 <td><a href="/book/<%=book._id%>"><%= book.title %></a></td>
                 <td><%=book.author%></td>
                 <td><%=book.genre%></td>
-                <td><%=book.rating%></td>
-                <td><%=book.mrp%></td>
+                <td><%=book.rating%>/5</td>
+                <td><%=book.mrp%>$</td>
               </tr>
               <%})%>
             </tbody>
