--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,15 +1,15 @@
 <html>
     <%- include ("./partials/header.ejs") %>
     <body>
-       <div class="loginForm">
+       <div class="loginForm container mt-4 border">
         <h1>Register</h1>
-        <h6>Already Have an account <span style="color: blue;">?</span> <a href="/login">Login</a></h6>
+        <h6 class="my-4" style="font-size: 1.3rem;">Already Have an account <span style="color: blue;">?</span> <a href="/login">Login</a></h6>
         <form method="POST">
-            <label for="username">Username</label>
-            <input id="username" name="username" type="text" placeholder="Enter the Username">
-            <label for="">Password</label>
-            <input id="password" name="password" type="password" placeholder="Enter the Password" >
-            <button type="submit">Submit</button>
+            <label for="username" class="form-label">Username</label>
+            <input id="username" class="form-control" name="username" type="text" placeholder="Enter the Username">
+            <label for="" class="form-label">Password</label>
+            <input id="password" class="form-control" name="password" type="password" placeholder="Enter the Password" >
+            <button type="submit" class="btn-primary btn my-5">Submit</button>
         </form>
        </div> 
 
