--- a/views/book_list.ejs
+++ b/views/book_list.ejs
@@ -6,10 +6,10 @@
       <div class="row">
         <%- include ("./partials/sidebar.ejs") %>
         <div class="col-sm-10">
-          <h3>Books list</h3>
+          <h3 class="pt-4" class="my-2">Books list</h3>
 
           <form class="row" action="/books/search-book" method="POST">
-            <div class="col-sm-3">
+            <div class="col-sm-3 my-2">
               Title: <input type="text" name="title" id="title" />
             </div>
             <div class="col-sm-3">
@@ -19,7 +19,7 @@
               Genre: <input type="text" name="genre" id="genre" />
             </div>
             <div class="col-sm-12 pt-2">
-              <button id="search_button" class="btn btn-primary" type="submit">
+              <button id="search_button" class="btn btn-primary my-2" type="submit">
                 Search
               </button>
             </div>
