--- a/views/loaned_books.ejs
+++ b/views/loaned_books.ejs
@@ -1,9 +1,9 @@
 <html>
   <%- include ("./partials/header.ejs") %>
   <body>
-    <h3>Loaned Books list</h3>
+    <h3 class="p-4">Loaned Books list</h3>
 
-    <table class="table">
+    <table class="table m-4">
       <thead>
         <tr>
           <th scope="col">#</th>
@@ -23,7 +23,12 @@
           <td><%= copy.book.genre %></td>
           <td><%= copy.borrow_date %></td>
           <td>
-            <!-- TODO: Create a Return book tag that is used for returning the book -->
+            <form action="/books/return" method="POST">
+              <input type="text" hidden value="<%= copy._id %>" name="bid" />
+              <button class="btn btn-primary" id="return-button" type="submit">
+                Return
+              </button>
+            </form>
           </td>
         </tr>
         <%})%>
