--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,12 @@
 
   <body>
     <%- include ("./partials/sidebar.ejs") %>
-    <h3>Welcome to the library. This is your homepage.</h3>
+    <div class="container text-center">
+      <h1 style="font-size: 5rem;margin-top: 200px;">
+        Welcome to the library. This is your homepage.
+      </h1>
+    </div>
+      
+  <%- include("./partials/footer") %>
   </body>
 </html>
