--- a/views/book_list.ejs
+++ b/views/book_list.ejs
@@ -2,30 +2,36 @@
   <%- include ("./partials/header.ejs") %>
 
   <body>
-    <div class="container-fluid">
-      <div class="row">
-        <%- include ("./partials/sidebar.ejs") %>
-        <div class="col-sm-10">
-          <h3>Books list</h3>
+    <%- include ("./partials/sidebar.ejs") %>
+    <div class="container-fluid text-center">
+      <div class="row d-flex justify-content-center">
+        
+        <div class="col-sm-8 col-10">
+          <h1 class="display-1">Books list</h1>
 
-          <form class="row" action="/books/search-book" method="POST">
-            <div class="col-sm-3">
-              Title: <input type="text" name="title" id="title" />
-            </div>
-            <div class="col-sm-3">
-              Author: <input type="text" name="author" id="author" />
-            </div>
-            <div class="col-sm-3">
-              Genre: <input type="text" name="genre" id="genre" />
-            </div>
-            <div class="col-sm-12 pt-2">
-              <button id="search_button" class="btn btn-primary" type="submit">
-                Search
-              </button>
+          <form class="d-flex justify-content-center" action="/books/search-book" method="POST">
+            <div class="form-row align-items-center">
+              <div class="col-auto">
+                <label class="my-1 mr-2 " style="font-size: 1.5rem;">Title :</label>
+                <input type="text" class="form-control mb-4" name="title" id="title" required placeholder="Book Title">
+              </div>
+              <div class="col-auto">
+                <label class="my-1 mr-2" style="font-size: 1.5rem;">Author :</label>
+                <input type="text" class="form-control mb-4" name="author" id="author" required placeholder="Book Author">
+              </div>
+              <div class="col-auto">
+                <label class="my-1 mr-2" style="font-size: 1.5rem;">Genre :</label>
+                <input type="text" class="form-control mb-4" name="genre" id="genre" required placeholder="Book Genre">
+              </div>
+              <div class="col-auto">
+                
+                <button id="search_button" class="btn btn-primary mt-4" type="submit">
+                  Search
+                </button>
+              </div>
             </div>
           </form>
-
-          <table class="table">
+          <table class="table table-hover table-dark">
             <thead>
               <tr>
                 <th scope="col">#</th>
@@ -39,8 +45,8 @@
             <tbody>
               <% books.forEach(function(book,i){%>
               <tr>
-                <th scope="row"><%=i %></th>
-                <td><a href="/book/<%=book.id%>/"><%= book.title %></a></td>
+                <th scope="row"><%=i+1%></th>
+                <td ><a href="/book/<%=book.id%>/" style="color : white;"><%= book.title %></a></td>
                 <td><%=book.author%></td>
                 <td><%=book.genre%></td>
                 <td><%=book.rating%></td>
@@ -48,9 +54,13 @@
               </tr>
               <%})%>
             </tbody>
+          
           </table>
+          
         </div>
       </div>
     </div>
+
+    <%- include("./partials/footer") %>
   </body>
 </html>
