--- a/views/loaned_books.ejs
+++ b/views/loaned_books.ejs
@@ -1,33 +1,48 @@
 <html>
   <%- include ("./partials/header.ejs") %>
   <body>
-    <h3>Loaned Books list</h3>
-
-    <table class="table">
+    <%- include ("./partials/sidebar.ejs") %>
+    <div class="container text-center">
+      <h1 class="display-3 my-4">Loaned Books list</h1>
+    </div>
+    
+    
+    <table class="table table-hover table-dark">
       <thead>
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">Title</th>
-          <th scope="col">Author</th>
-          <th scope="col">Genre</th>
-          <th scope="col">Borrow Date</th>
-          <th scope="col">Return Buttons</th>
+          <th style="font-size:1.3rem;" scope="col">#</th>
+          <th style="font-size:1.3rem;" scope="col">Title</th>
+          <th style="font-size:1.3rem;" scope="col">Author</th>
+          <th style="font-size:1.3rem;" scope="col">Genre</th>
+          <th style="font-size:1.3rem;" scope="col">Borrow Date</th>
+          <th style="font-size:1.3rem;" scope="col">Borrow Time</th>
+          <th style="font-size:1.3rem;" scope="col">Return Buttons</th>
         </tr>
       </thead>
       <tbody>
         <% books.forEach(function(copy,i){%>
-        <tr>
-          <th scope="row"><%= i %></th>
-          <td><a href="/book/<%=copy.book.id%>/"><%= copy.book.title %></a></td>
-          <td><%= copy.book.author %></td>
-          <td><%= copy.book.genre %></td>
-          <td><%= copy.borrow_date %></td>
-          <td>
-            <!-- TODO: Create a Return book tag that is used for returning the book -->
-          </td>
-        </tr>
-        <%})%>
+          <tr>
+            <th class="pt-4" scope="row" style="font-size:1.3rem;"><%= i+1 %></th>
+            <td class="pt-4" style="font-size:1.3rem;"><a href="/book/<%=copy.book._id%>/" style="color:white"><%= copy.book.title %></a></td>
+            <td class="pt-4" style="font-size:1.3rem;"><%= copy.book.author %></td>
+            <td class="pt-4" style="font-size:1.3rem;"><%= copy.book.genre %></td>
+            <td class="pt-4" style="font-size:1.3rem;"><%= copy.borrow_date.getUTCDate() %> / <%= copy.borrow_date.getMonth() + 1%> / <%= copy.borrow_date.getUTCFullYear() %></td>
+            <td class="pt-4" style="font-size:1.3rem;"><%= copy.borrow_date.getHours() %> : <%= copy.borrow_date.getMinutes()%> : <%= copy.borrow_date.getSeconds() %></td>
+            <td>
+              <!-- TODO: Create a Return book tag that is used for returning the book -->
+              <form action="/books/return-book" method="POST">
+                <input type="text" hidden value="<%= copy.book.id %>" name="bid" />
+                <button class="btn  btn-light mt-1" id="return-button" type="submit"style="font-size:1.3rem;" >
+                  Return <%= copy.book.title %>
+                </button>
+              </form>
+            </td>
+          </tr>
+          <%})%>
       </tbody>
+    
     </table>
+    
+    <%- include("./partials/footer") %>
   </body>
 </html>
