--- a/views/book_list.ejs
+++ b/views/book_list.ejs
@@ -39,8 +39,8 @@
             <tbody>
               <% books.forEach(function(book,i){%>
               <tr>
-                <th scope="row"><%=i %></th>
-                <td><a href="/book/<%=book.id%>/"><%= book.title %></a></td>
+                <th scope="row"><%=i+1 %></th>
+                <td><a href="/book/<%=book._id%>"><%= book.title %></a></td>
                 <td><%=book.author%></td>
                 <td><%=book.genre%></td>
                 <td><%=book.rating%></td>
