--- a/views/loaned_books.ejs
+++ b/views/loaned_books.ejs
@@ -17,12 +17,18 @@
       <tbody>
         <% books.forEach(function(copy,i){%>
         <tr>
-          <th scope="row"><%= i %></th>
+          <th scope="row"><%= i+1 %></th>
           <td><a href="/book/<%=copy.book.id%>/"><%= copy.book.title %></a></td>
           <td><%= copy.book.author %></td>
           <td><%= copy.book.genre %></td>
           <td><%= copy.borrow_date %></td>
           <td>
+            <form action="/books/return" method="POST">
+              <input type="text" hidden value="<%= copy._id %>" name="bid" />
+                <button class="btn btn-primary" id="loan-button" type="submit">
+                  Return
+                </button>
+            </form>
             <!-- TODO: Create a Return book tag that is used for returning the book -->
           </td>
         </tr>
