--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <html>
   <%- include ("./partials/header.ejs") %>
 
-  <body>
+  <body class="py-4">
     <%- include ("./partials/sidebar.ejs") %>
     <h3>Welcome to the library. This is your homepage.</h3>
   </body>
