--- a/views/book_detail.ejs
+++ b/views/book_detail.ejs
@@ -1,7 +1,7 @@
 <html>
   <%- include ("./partials/header.ejs") %>
 
-  <body>
+  <body class="py-4">
     <div class="container-fluid">
       <div class="row">
         <%- include ("./partials/sidebar.ejs") %>
@@ -20,13 +20,24 @@
             <dt>MRP:</dt>
             <dd>Rs. <%= book.mrp %></dd>
             <dt>Available Copies:</dt>
-            <dd><%= num_available %></dd>
+            <dd><%= book.available_copies %></dd>
           </dl>
           <form action="/books/issue" method="POST">
             <input type="text" hidden value="<%= book.id %>" name="bid" />
+            <% if(book.available_copies > 0){ %>
             <button class="btn btn-primary" id="loan-button" type="submit">
               Loan <%= book.title %>
             </button>
+            <% } else{ %>
+            <button
+              class="btn btn-primary"
+              id="loan-button"
+              type="submit"
+              disabled
+            >
+              Loan <%= book.title %>
+            </button>
+            <% } %>
           </form>
         </div>
       </div>
