--- a/views/book_list.ejs
+++ b/views/book_list.ejs
@@ -1,7 +1,7 @@
 <html>
-  <%- include ("./partials/header.ejs") %>
+  <%- include ("./partials/header.ejs", {title: 'List of Books'}) %>
 
-  <body>
+  <body class="py-4">
     <div class="container-fluid">
       <div class="row">
         <%- include ("./partials/sidebar.ejs") %>
