--- a/views/loaned_books.ejs
+++ b/views/loaned_books.ejs
@@ -1,33 +1,57 @@
 <html>
-  <%- include ("./partials/header.ejs") %>
-  <body>
-    <h3>Loaned Books list</h3>
+  <%- include ("./partials/header.ejs", {title: 'Loaned Books'}) %>
+  <body class="py-4">
+    <div class="container-fluid">
+      <div class="row">
+        <%- include ("./partials/sidebar.ejs") %>
+        <div class="col-sm-10">
+          <h3>Loaned Books list</h3>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Title</th>
+                <th scope="col">Author</th>
+                <th scope="col">Genre</th>
+                <th scope="col">Borrow Date</th>
+                <th scope="col">Return</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% books.forEach(function(copy,i){%>
+              <tr>
+                <th scope="row"><%= i %></th>
+                <td>
+                  <a href="/book/<%=copy.book.id%>/"><%= copy.book.title %></a>
+                </td>
+                <td><%= copy.book.author %></td>
+                <td><%= copy.book.genre %></td>
+                <td><%= copy.borrow_date %></td>
+                <td>
+                  <!-- TODO: Create a Return book tag that is used for returning the book -->
+                  <form action="/books/return" method="POST">
+                    <input
+                      type="text"
+                      hidden
+                      value="<%= copy.book.id %>"
+                      name="bid"
+                    />
 
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Title</th>
-          <th scope="col">Author</th>
-          <th scope="col">Genre</th>
-          <th scope="col">Borrow Date</th>
-          <th scope="col">Return Buttons</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% books.forEach(function(copy,i){%>
-        <tr>
-          <th scope="row"><%= i %></th>
-          <td><a href="/book/<%=copy.book.id%>/"><%= copy.book.title %></a></td>
-          <td><%= copy.book.author %></td>
-          <td><%= copy.book.genre %></td>
-          <td><%= copy.borrow_date %></td>
-          <td>
-            <!-- TODO: Create a Return book tag that is used for returning the book -->
-          </td>
-        </tr>
-        <%})%>
-      </tbody>
-    </table>
+                    <button
+                      class="btn btn-primary"
+                      id="return-button"
+                      type="submit"
+                    >
+                      Return Book
+                    </button>
+                  </form>
+                </td>
+              </tr>
+              <%})%>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
