--- a/views/book_detail.ejs
+++ b/views/book_detail.ejs
@@ -22,12 +22,14 @@
             <dt>Available Copies:</dt>
             <dd><%= num_available %></dd>
           </dl>
-          <form action="/books/issue" method="POST">
-            <input type="text" hidden value="<%= book.id %>" name="bid" />
-            <button class="btn btn-primary" id="loan-button" type="submit">
-              Loan <%= book.title %>
-            </button>
-          </form>
+          <% if(num_available>0){ %>
+            <form action="/books/issue" method="POST">
+              <input type="text" hidden value="<%= book.id %>" name="bid" />
+              <button class="btn btn-primary" id="loan-button" type="submit">
+                Loan <%= book.title %>
+              </button>
+            </form>
+          <% } %>
         </div>
       </div>
     </div>
