--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,16 +1,38 @@
-<div class="col-sm-2">
-  <ul class="sidebar-nav">
-    <li><a href="/">Home</a></li>
-    <li><a href="/books">All books</a></li>
-  </ul>
-
-  <ul class="sidebar-nav">
-    <% if (currentUser){ %>
-    <li>User: <%= currentUser.username %></li>
-    <li><a href="/books/loaned">My Borrowed</a></li>
-    <li><a href="/logout">Logout</a></li>
-    <% } else { %>
-    <li><a href="/login">Login</a></li>
-    <% } %>
-  </ul>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <% if (currentUser) { %>
+    <a class="navbar-brand" href="#">user: <%= currentUser.username %></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item <%= path === '/' ? 'active' : '' %>">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item <%= path === '/books' ? 'active' : '' %>">
+          <a class="nav-link" href="/books">All Books</a>
+        </li>
+        <li class="nav-item <%= path === '/books/loaned' ? 'active' : '' %>">
+          <a class="nav-link" href="/books/loaned">My Borrowed</a>
+        </li>
+        <li class="nav-item <%= path === '/logout' ? 'active' : '' %>">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+      </ul>
+    </div>
+  <% } else { %>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item <%= path === '/login' ? 'active' : '' %>">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li class="nav-item <%= path === '/register' ? 'active' : '' %>">
+          <a class="nav-link" href="/register">Register</a>
+        </li>
+      </ul>
+    </div>
+  <% } %>
+</nav>
