--- a/views/book_detail.ejs
+++ b/views/book_detail.ejs
@@ -7,7 +7,6 @@
         <%- include ("./partials/sidebar.ejs") %>
         <div class="col-sm-10">
           <h2>Title: <%= book.title %></h2>
-
           <dl>
             <dt>Genre:</dt>
             <dd><%= book.genre %></dd>
@@ -20,7 +19,7 @@
             <dt>MRP:</dt>
             <dd>Rs. <%= book.mrp %></dd>
             <dt>Available Copies:</dt>
-            <dd><%= num_available %></dd>
+            <dd><%= book.available_copies %></dd>
           </dl>
           <form action="/books/issue" method="POST">
             <input type="text" hidden value="<%= book.id %>" name="bid" />
