--- a/views/loaned_books.ejs
+++ b/views/loaned_books.ejs
@@ -24,6 +24,10 @@
           <td><%= copy.borrow_date %></td>
           <td>
             <!-- TODO: Create a Return book tag that is used for returning the book -->
+            <form action="/books/return" method="POST">
+              <input type="text" hidden value="<%= copy._id %>" name="bid" />
+              <button type="return">Return <%= copy.book.title %></button>
+            </form>
           </td>
         </tr>
         <%})%>
