--- a/views/book_detail.ejs
+++ b/views/book_detail.ejs
@@ -2,9 +2,10 @@
   <%- include ("./partials/header.ejs") %>
 
   <body>
-    <div class="container-fluid">
+    <%- include ("./partials/sidebar.ejs") %>
+   
+    <div class="container">
       <div class="row">
-        <%- include ("./partials/sidebar.ejs") %>
         <div class="col-sm-10">
           <h2>Title: <%= book.title %></h2>
 
@@ -20,17 +21,19 @@
             <dt>MRP:</dt>
             <dd>Rs. <%= book.mrp %></dd>
             <dt>Available Copies:</dt>
-            <% num_avi=book.numbooks %>
+            <% num_avi=book.available_copies%>
             <dd><%= num_avi %></dd
-              <% console.log(book.numbooks) %>  
+              <% console.log(book.available_copies) %>  
           </dl>
-          <% if(num_avi) {%>
+          <% if(num_avi) {
+            %>
           <form action="/books/issue" method="POST">
             <input type="text" hidden value="<%= book.id %>" name="bid" />
             <button class="btn btn-primary" id="loan-button" type="submit">
               Loan <%= book.title %>
             </button>
-          <%}%>
+          <%
+        }%>
           </form>
         </div>
       </div>
