--- a/views/login.ejs
+++ b/views/login.ejs
@@ -95,6 +95,7 @@
 
   <body>
     <%- include('partials/sidebar') %>
+    <%- include('partials/flasher') %>
 
     <div class="container-fluid">
       <div class="row">
