--- a/views/register.ejs
+++ b/views/register.ejs
@@ -95,6 +95,8 @@
 
   <body>
     <%- include('partials/sidebar') %>
+    <%- include('partials/flasher') %>
+
     <div class="container-fluid">
       <div class="row">
         <!-- Banner Start -->
